src/objects/Media__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>price__c</fullName>
        <description>Price of the media</description>
        <label>price</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>total_qty__c</fullName>
        <description>Represents total quantity of media</description>
        <label>total_qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Media</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Inventory</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Media</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>